css/style.css
body {
	padding: 80px 0 0;
	font-size: 14px;
}
.login {
	padding-top: 20px;
}
@media (max-width: 767px) {
	.navbar-fixed-top > .navbar-btn {
		float: right;
		margin-right: 8px;
	}
	.navbar-nav, .navbar-nav .dropdown.open {
		text-align: right;
	}
}

.navbar {
	padding: 0 10px;
}
.navbar-brand {
	height: 100%;
}
.navbar-brand img {
	height: 40px;
	width: auto;
	margin: -12px 0;
	vertical-align: baseline;
}

.navbar-nav > li > a > .glyphicon {
	line-height: inherit;
}
.navbar-form.navbar-right,
.navbar-form.navbar-right:last-child {
	margin-right: 0;
}

footer p {
	line-height: 20px;
	font-size: 85%;
}

.js{display: block;}
.nojs{display: none;}

.nav-tabs {
	margin-bottom: 15px;
}

.pull-left-full {
	overflow: hidden;
}

a.nolink {
	color: inherit;
	text-decoration: inherit;
}
a.nolink:hover {
	text-decoration: underline;
}

.badge.status {
	opacity: 0.7;
}
.dashboard .list-group-item .badge {
	margin-top: 3px;
}
.dashboard .list-group-item .badge-sibling {
	margin: 2px 10px 0 0;
}
.dashboard-widget-box {
	min-height: 300px;
	padding-bottom: 100px;
}
.dashboard-widget-handle {
	position: relative;
	cursor: move;
}
.dashboard-widget-handle .close {
	position: absolute;
	top: 5px;
	right: 5px;
	color: inherit;
	visibility: hidden;
}
.dashboard-widget:hover .dashboard-widget-handle .close {
	visibility: visible;
}
@media screen and (max-width: 767px) {
	.dashboard-widget-handle .close {
		visibility: visible;
	}
}

textarea {
	resize: vertical;
	min-height: 3em;
}

.img-border {
	display: inline-block;
	position: relative;
}
.img-border img {
	display: inline-block;
}
.img-border:before {
	display: block;
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16) inset;
}
.img-border-rounded:before {
	border-radius: 6px;
}

.issue-list .issue-filters th,
.issue-list .issue-filters td {
	padding-left: 0;
}
.issue-list .issue-filters th .form-control,
.issue-list .issue-filters td .form-control {
	height: auto;
	padding: 2px;
}

.issue-heading {
	margin: 0 0 20px;
}
ol.issue-heading.breadcrumb {
	padding: 0;
	background-color: transparent;
	font-size: 26px;
	line-height: 1.1;
}

.issue-head .profile-picture,
.comment .profile-picture,
.update .profile-picture {
	margin-right: 10px;
	float: left;
}
.issue-head p {
	float: left;
	line-height: 20px;
	padding: 4px 0;
}

.comments > .media p,
#history .media p {
	line-height: 20px;
}
.comments .comment p:last-child {
	line-height: 16px;
}
.comments,
.comments > .media p.media-heading,
.comments > .media p:last-child,
#history .media p.media-heading,
#history .media p:last-child,
.comments .form-group:last-child {
	margin-bottom: 0;
}
.comments > .media p small {
	font-size: 12px;
}
#history .media ul {
	padding-left: 1.3em;
}
.comments > form {
	margin-top: 15px;
}

.breadcrumb.panel-title {
	padding: 0;
	background-color: transparent;
}
.panel-heading.has-buttons .panel-title {
	line-height: 24px;
}

select[multiple] {
	padding: 2px;
}

.file-list li {
	position: relative;
	text-align: center;
	width: 106px;
	overflow: hidden;
	white-space: nowrap;
}
.file-list li img {
	width: 96px;
}
.file-list li .delete {
	position: absolute;
	top: 0;
	left: 0;
	visibility: hidden;
}
.file-list li:hover .delete {
	visibility: visible;
}

.issue-list .closed {
	text-decoration: line-through;
}

.form-horizontal .checkbox-container-inline {
	display: inline-block;
	padding-top: 5px;
	margin-left: 10px;
}

.modal-footer .checkbox-container-inline {
	display: inline-block;
	padding-top: 5px;
	margin: 0;
}

textarea.form-control {
	padding-right: 5px;
}

.alert-popup {
	position: fixed;
	top: 65px;
	right: 15px;
	z-index: 20;
}
.alert-popup.alert-popup-center {
	left: 50%;
	width: 300px;
	margin-left: -150px;
}

/* Dashboard Compact UI */
.dashboard .list-group-item {
	padding: 5px 10px;
	position: relative;
}
.dashboard .list-group-item .priority {
	position: absolute;
	left: 0;
	top: 0;
	width: 3px;
	height: 100%;
}
.dashboard .list-group-item-heading {
	margin-top: 1px;
	margin-bottom: 1px;
}
.form-horizontal .control-label.label-sm {
	padding-top: 8px;
}


.dl-inline dt {
	float: left;
	clear: left;
	margin-right: .5em;
}
.dl-inline dt:after {
	content: ':';
}

.dl-horizontal-left dt {
	text-align: left;
}

.panel-heading a[data-toggle='collapse']:before {
	content: '\25bc';
	margin-right: 5px;
}
.panel-heading a.collapsed:before {
	content: '\25b6';
}
.panel-heading a[data-toggle='collapse']:hover,
.panel-heading a[data-toggle='collapse']:focus {
	text-decoration: none;
}

a:focus, button:focus, input:focus, .btn:focus {
	outline: thin none;
}

table a.btn {
	text-decoration: none;
}

.form-horizontal .checkbox-left {
	float: left;
	margin-right: 1em;
}

.form-horizontal .checkbox-sm {
	padding-top: 0;
}

.list-group-item .label {
	margin: 0 0.3em;
}

.form-control .form-control-child {
	overflow: hidden;
}
.form-control .form-control-child input {
	width: 100%;
	border-width: 0;
}

.log {
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	font-size: 11px;
	overflow-x: auto;
	white-space: pre;
}

/* Textile processed styles */
.tex {
	word-wrap: break-word;
}
.tex table {
	margin: 10px 0;
}
.tex table td {
	padding: 2px 5px;
	border: 1px solid #ccc;
}
.tex ul,
.tex ol {
	padding-left: 20px;
	margin-bottom: 0;
}
.tex blockquote {
	font-size: inherit;
	padding: 0 0 0 5px;
	margin-bottom: 5px;
}
.tex del {
	opacity: 0.45;
	transition: opacity .25s ease;
}
.tex del:hover {
	opacity: 1;
}
.tex pre a {
	color: inherit;
}

.popover-content {
	text-overflow: ellipsis;
	overflow: hidden;
}

/* Make huge dropdowns usable */
.dropdown-menu {
	max-height: 400px;
	overflow-y: auto;
}

.dropdown-menu.datepicker {
	overflow-y: visible;
	font-size: 14px;
	max-height: none;
}

.nowrap {
	white-space: nowrap;
}

/* Make diff beautiful :') */
.Differences {
	font-family: 'Consolas', 'Monaco', monospace;
	font-size: 12px;
}
#history .DifferencesInline thead,
#history .DifferencesInline tbody th {
	display: none;
}

#history .DifferencesInline .ChangeReplace .Left,
#history .DifferencesInline .ChangeDelete .Left {
	background-color: #fdd;
	background-color: rgba(255,0,0,0.1);
}
#history .DifferencesInline .ChangeReplace del {
	background-color: #e99;
	background-color: rgba(255,0,0,0.2);
}

#history .DifferencesInline .ChangeReplace .Right,
#history .DifferencesInline .ChangeInsert .Right {
	background-color: #dfd;
	background-color: rgba(50,255,50,0.1);
}
#history .DifferencesInline .ChangeReplace ins {
	background-color: #9e9;
	background-color: rgba(50,255,50,0.25);
}

/* Add wider and narrower form-inline groups */
@media (min-width: 768px) {
	.form-inline .form-group-wide .form-control {
		width: 260px;
	}
	.form-inline .form-group-narrow .form-control {
		width: 100px;
	}
}

th[data-sort] {
	cursor: pointer;
}

.comment-delete {
	visibility: hidden;
}
.media:hover .comment-delete {
	visibility: visible;
}
@media (max-width: 768px) {
	.comment-delete {
		visibility: visible;
	}
}

/* Possibly fix navbar dropdowns on mobile devices */
@media (max-width: 768px) {
	.dropdown-backdrop {
		position: static;
	}
}

/* Prevent navbar from overflowing when containing many items */
@media (min-width: 768px) and (max-width: 1200px) {
	.navbar-nav > li:nth-last-child(n+5) > a,
	.navbar-nav > li:nth-last-child(n+5) ~ li > a {
		padding-left: 8px;
		padding-right: 8px;
	}
}
@media (min-width: 768px) and (max-width: 992px) {
	.navbar-form[role=search] .form-control:not(:focus):-webkit-input-placeholder {
		color: transparent;
	}
	.navbar-form[role=search] .form-control:not(:focus)::-moz-placeholder {
		color: transparent;
	}
	.navbar-form[role=search] .form-control:not(:focus):-ms-input-placeholder {
		color: transparent;
	}
	.navbar-form[role=search] .form-control {
		width: 105px;
		transition: all .1s ease;
	}
	.navbar-form[role=search] .form-control:focus {
		width: 165px;
	}
	.navbar-form[role=search] .btn {
		display: none;
	}
}

.twitter-typeahead {
	display: block !important;
}
.twitter-typeahead .dropdown-menu {
	min-width: 300px;
	width: 100%;
	padding: 0;
}
.twitter-typeahead .tt-suggestion {
	padding: 6px 12px;
	color: #404040;
	cursor: pointer;
	font-size: 13px;
}
.twitter-typeahead .tt-suggestion:hover {
	background-color: #00bc8c;
	color: #fff;
}
.twitter-typeahead .tt-suggestion:hover .text-muted {
	color: #eee;
}

.editor-toolbar {
	background-color: #fff;
	opacity: 0.75 !important;
	transition: opacity .2s ease;
}
.editor-toolbar:hover {
	opacity: 0.85 !important;
}

